projects/compiler/test/typechecker/if/error_binding_invalid_destructuring_tuple.out
Error at %FILE_NAME%:2:12
Invalid destructuring
  |  if arr[0] |(a, b)| {
                ^
A value of type 'Int' cannot be destructured as a tuple
